tests/snapshots/file@for@statement_condition.lox.snap
---
source: tests/common/mod.rs
description: "// [line 3] Error at '{': Expect expression.\n// [line 3] Error at ')': Expect ';' after expression.\nfor (var a = 1; {}; a = a + 1) {}\n"
input_file: crafting_interpreters_test_files/for/statement_condition.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '{'
   ╭─[3:17]
 2 │ // [line 3] Error at ')': Expect ';' after expression.
 3 │ for (var a = 1; {}; a = a + 1) {}
   ·                 ┬
   ·                 ╰── here
   ╰────
Error:   × expected Semicolon, found ')'
   ╭─[3:30]
 2 │ // [line 3] Error at ')': Expect ';' after expression.
 3 │ for (var a = 1; {}; a = a + 1) {}
   ·                              ┬
   ·                              ╰── here
   ╰────
